# ros2_console_browser

./: CLAUDE.md  README.md  build_depends.repos  openapi.yaml
docker/: Dockerfile  docker-compose.yml
docs/claudecode/: README.md  README_ja.md
ros2_console_browser_node/: CMakeLists.txt  package.xml
ros2_console_browser_node/example/: client.html
ros2_console_browser_node/include/ros2_console_browser_node/: rest_api_server.hpp
ros2_console_browser_node/src/: rest_api_server_node.cpp
ros2_console_rest_api_node/: CMakeLists.txt  package.xml
ros2_console_rest_api_node/example/: client.html  darkmode.css  lightmode.css  style.css
ros2_console_rest_api_node/include/ros2_console_rest_api_node/: rest_api_server.hpp
ros2_console_rest_api_node/src/: log_client_dist_server.cpp  rest_api_server_node.cpp
