<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_console_rest_api_node</name>
  <version>0.0.0</version>
  <description>Web-based log viewer for ROS2</description>
  <maintainer email="ray255ar@gmail.com">Ar-Ray-code</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>log_viewer_base</depend>
  <depend>rcl_interfaces</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>libcpp-httplib-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>